@@ -1,0 +1,6 @@
+// $Id$ - PHP test
+<?php if(true): ?>
+var __vboxPHP = true;
+<?php else: ?>
+var __vboxPHP = false;
+<?php endif; ?>
